--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <li ng-repeat="item in toBuy.items">
             Buy {{ item.quantity }} {{ item.name }}
             <button ng-click="toBuy.buy($index)" class="btn btn-default">
-              <span ng-if="item.name!=='Final Fantasy XV'" class="glyphicon glyphicon-shopping-cart"></span>Buy
+              <span ng-if="item.name!=='Final Fantasy XV'" class="glyphicon glyphicon-shopping-cart"></span>Bought
               <img src="images/logo-final-fantasy.png" style="width:120px" ng-if="item.name==='Final Fantasy XV'">
             </button>
           </li>
